--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -66,8 +66,6 @@
         android:layout_marginTop="20dp" />
 
 
-
-
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -78,7 +76,66 @@
     android:layout_alignStart="@id/dice_button_2"
     android:layout_alignRight="@id/dice_button_2"
     android:layout_alignEnd="@id/dice_button_2"
-    android:layout_below="@id/dice_button_4"
-    android:layout_marginTop="20dp" />
+    android:layout_below="@id/dice_button_5"
+    android:layout_marginTop="15dp"
+     />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next Player"
+        android:id="@+id/next_player_button"
+        android:layout_gravity="bottom"
+        android:layout_alignLeft="@id/dice_button_2"
+        android:layout_alignStart="@id/dice_button_2"
+        android:layout_alignRight="@id/dice_button_2"
+        android:layout_alignEnd="@id/dice_button_2"
+        android:layout_below="@id/dice_button_5"
+        android:layout_marginTop="15dp"
+        android:visibility="invisible" />
+
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Largest Crew:  "
+        android:id="@+id/largest_crew_title"
+        android:layout_alignLeft="@id/dice_button_1"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="10dp"
+        android:textStyle="bold"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/largest_crew"
+        android:layout_toRightOf="@id/largest_crew_title"
+        android:layout_alignTop="@id/largest_crew_title"
+        android:textStyle="bold"
+        android:textSize="20sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remaining Tries:  "
+        android:id="@+id/remaining_tries_title"
+       android:layout_toRightOf="@+id/largest_crew"
+        android:layout_alignTop="@+id/largest_crew"
+        android:layout_marginLeft="10dp"
+        android:textStyle="bold"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:id="@+id/remaining_tries"
+        android:layout_toRightOf="@id/remaining_tries_title"
+        android:layout_alignTop="@id/remaining_tries_title"
+        android:textStyle="bold"
+        android:textSize="20sp" />
 
 </RelativeLayout>
